# sse-parser-demo

./: README.md  main.ts  streaming.ts
golang/: README.md  go.mod  main.go
golang/stream/: parser.go
python/: README.md  pyproject.toml
python/sse_demo/: __main__.py  parser.py
typescript/: README.md  main.ts  openapi.yaml  package-lock.json  package.json  request.ts  streaming.test.ts  streaming.ts  tsconfig.json
