[tool.poetry]
name = "sse-demo"
version = "0.1.0"
description = ""
authors = ["Georges Haidar <ghaidar0@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sse_demo"}]

[tool.poetry.scripts]
sse-demo = "sse_demo.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
dataclasses-json = "^0.6.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
